@@ -12,4 +12,5 @@ public:
   virtual void rest(const double time)= 0;
   virtual void play_note(const int note, const double time) = 0;
   virtual void add_bar() = 0;
+  virtual void set_volume(unsigned int value) = 0;
 };
